# kv-cache-compression

./: .gitignore  README.md  REPORT.md  REPORT_CN.md  pyproject.toml  requirements.txt
main/: main.tex
results/: ablation_pg19_asw_important_0.json  ablation_pg19_asw_important_16.json  ablation_pg19_asw_important_32.json  ablation_pg19_asw_important_64.json  ablation_pg19_important_size.json  baseline_summary.md  latency_pg19_gpu_512_64.json  latency_pg19_gpu_512_64_all_kv.json  latency_pg19_gpu_512_64_extended.json  ppl_pg19_1024.json  ppl_pg19_1024_all_kv.json  ppl_pg19_1024_extended.json  ppl_wikitext_1024.json  ppl_wikitext_1024_all_kv.json  ppl_wikitext_1024_extended.json  smoke_pg19_latency.json  smoke_pg19_ppl.json
scripts/: download_pg19_raw.py  export_wikitext_text.py  run_all_experiments.ps1  run_latency.py  run_ppl.py  run_server_experiments.sh  summarize_results.py  summarize_server_results.sh
src/llm_kv_compression/: __init__.py  cache.py  data.py  evaluation.py  modeling.py
tests/: test_cache.py
